clang/test/BSC/Trait/r2/trait_parse_err.cbs
// TODO: make the diagnostics look nice

trait ( // expected-error {{expected identifier after trait}}
  void f1(This* this):
)

